--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h3>Bem-vindos(as)!</h3>
+    </main>
+  </body>
 </html>
