link na pasta public + css menu

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pagina inicial</title>
+    <link rel="stylesheet" href="../../public/styles/global.css" />
+    <style></style>
   </head>
   <body>
+    <nav class="menu">
+      <a href="/">
+        <img
+          class="logo"
+          src="https://static.wixstatic.com/media/5a9c70_462af9a44ad149b8a3dd3e03e8833f59~mv2_d_1600_1200_s_2.jpg/v1/fill/w_500,h_375,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/5a9c70_462af9a44ad149b8a3dd3e03e8833f59~mv2_d_1600_1200_s_2.jpg"
+          alt="logo site"
+        />
+      </a>
+      <ul>
+        <a href="/contato"> contato </a>
+        <a href="/sobre"> sobre nós </a>
+        <a class="btn-logar" href="/login">LOGAR</a>
+      </ul>
+    </nav>
     <main>
       <h3>Bem-vindos(as)!</h3>
     </main>
